## CHANGELOG

- __2012/09/16__: 0.9.5 release.
    - Fixed [Issue 9: trimされていない文字列のparse](https://bitbucket.org/buruzaemon/natto/issue/9/trim-parse) 
    - Adding parse_as_nodes to allow for method-chaining on list of parsed nodes
    - Adding parse_as_strings to allow for method-chaining on list of string output
    - Deprecating both readnodes and readlines (badly named methods, see parse_as_nodes and parse_as_strings, respectively)
    - Refactored the option parsing logic into Natto::OptionParse
    - Enhanced Natto::DictionaryInfo#type override for java or ruby < 1.9

- __2012/02/26__: 0.9.4 release.
    - Exposing the underlying FFI pointer as @tagger in Natto::MeCab
    - Exposing the underlying FFI pointer as @pointer in Natto::MeCabNode
    - Fixed node formatting behavior for both regular and N-Best node parsing
    - Adding is_nor?, is_unk?, is_bos?, is_eos?, is_eon? to Natto::MeCabNode 
    - Adding is_sysdic?, is_usrdic?, is_unkdic? to Natto::DictionaryInfo 
    - Adding readnodes to allow for method-chaining on list of parsed nodes
    - Adding readlines to allow for method-chaining on list of string output
    - Updating README to include description of DevKit install for RubyInstaller
    - Refactored the codebase, introducing more tests

- __2012/02/14__: 0.9.3 release.
    - Updating structures, tests following the latest release of MeCab 0.993
    - Ending support for 0.98 MeCab.
    - Support for MeCab 0.993 in Cygwin is still not confirmed.

- __2011/11/14__: 0.9.2 release.
    - Bumping up version to 0.9.2, following the migration of this project to bitbucket (hg)

- __2011/10/23__: 0.9.1 release.
    - MeCab configurations can now be a string as per MeCab command-line
    - Adding more tests around the configuration processing
    - Pulling support for mecab option 'output', since it is more of a command-line feature

- __2011/09/11__: 0.9.0 release.
    - Bumping up version to 0.9.0, as natto appears to be stable